2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-10-26  Andreas Kupries  <andreask@activestate.com>

	* autoproxy.man: [Bug 3094654]: Made the spelling of options
	  consistent, all using their '-'.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* autoproxy.pcx: New file. Syntax definitions for the public
	  commands of the autoproxy package.

2008-02-29  Andreas Kupries  <andreask@activestate.com>

	* autoproxy.tcl (::autoproxy::init, ::autoproxy::GetWin32Proxy):
	  Added tclchecker pragmas to suppress false non-portable command
	  warnings.

	* autoproxy.tcl (::autoproxy::cget): Removed bogus closing
	* autoproxy.man: bracket. Bumped version to 1.5.1
	* pkgIndex.tcl:

2008-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Fix title usage in defAuthProc

2008-02-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.man: Increment version to 1.5 and document.
	* autoproxy.tcl: Fixed architectural problems that prevented the
	http registered command from having tls package options
	appended. This makes an incompatible change to the tls_connect
	command and the host and port must now be the last two options.
	* autoproxy.tcl: Re-organised the tls_connect code to split out
	the connect and the tls parts to create a tunnel_connect command